--- a/Food App/index.css
+++ b/Food App/index.css
@@ -21,3 +21,106 @@
    font-size: 1.3rem;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.restraContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  
+}
+.restroCard{
+    width:300px;
+    height:250px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f0f0f0;
+    padding: 5px;
+    margin: 10px 10px;
+    border-radius: 8px;
+}
+.restroCard:hover{
+    border:2px solid rgb(248, 244, 244);
+    cursor: pointer;
+}
+.imgCard{
+    width:100%;
+    height:75%;
+    position: relative;
+
+}
+.imgLogo{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    
+}
+.restroDetails{
+    width:100%;
+    height:25%;
+    font-size: 0.9rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: row;
+    padding: 2px;
+}
+.restroName{
+font-weight: bold;
+font-size: 1rem;
+}
+.restroDetailsChild1{
+    width:70%;
+    height:100%;
+    font-size: 0.9rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin-top: 8px;
+}
+.restroDetailsChild2{
+    width:30%;
+    height:100%;
+    font-size: 0.9rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin-top: 8px;
+}
+.restroRating{
+    width:55px;
+    height:20px;
+    background-color: green;
+    border-radius: 5px;
+    text-align: center;
+}
+.restroEta{
+    width:55px;
+    height:20px;
+    /* background-color: green;
+    border-radius: 5px; */
+}
+.restroCost{
+    width:100px;
+    height:20px;
+    /* background-color: green;
+    border-radius: 5px; */
+}
+.text-container {
+    position: absolute;
+    color: rgb(255, 255, 255);
+    /* left: 18rem; */
+    top: 10rem;
+    font-size: 1rem;
+    padding: 0px 0.6rem;
+    background: rgb(37, 111, 239);
+    color: rgb(255, 255, 255);
+    font-weight: 400;
+    width: max-content;
+    border-radius: 0px 0.2rem 0.2rem 0px;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.restroItems{
+font-size: 0.7rem;
+}
