--- a/Food App/index.css
+++ b/Food App/index.css
@@ -1,12 +1,19 @@
 .headerContainer{
     display: flex;
     justify-content: space-between;
-    border:1px solid black;
+    /* border:1px solid black; */
     align-items: center;
 }
 .logoIcon{
     width:100px;
     height:100px;
+}
+.navBarContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 4%;
 }
 .navBarContainer ul{
     display: flex;
@@ -134,4 +141,33 @@ font-size: 0.7rem;
 }
 .filter-btn{
     margin: 10px;
+}
+/* .btnComp{
+    width:80px;
+    height:80px
+} */
+
+.restraCont1{
+    width:100%;
+    height:50px;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: center; */
+    align-items: center;
+}
+.search-box{
+    width:85%;
+    height:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 2%;
+}
+.serach-input{
+    width:90%;
+    height: 50%;
+   margin: 0 3%;
+}
+.search-btn{
+    width:7%;
 }
