--- a/Food App/index.css
+++ b/Food App/index.css
@@ -1,173 +1,3 @@
-.headerContainer{
-    display: flex;
-    justify-content: space-between;
-    /* border:1px solid black; */
-    align-items: center;
-}
-.logoIcon{
-    width:100px;
-    height:100px;
-}
-.navBarContainer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-right: 4%;
-}
-.navBarContainer ul{
-    display: flex;
-    flex-direction: row;
-    margin-right: 20px;
-    
-}
-.navBarContainer ul li{
-   margin-left: 15px;
-   margin-right: 15px;
-   list-style-type: none;
-   font-size: 1.3rem;
-   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-.restraContainer{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: column;
-  
-}
-.restraContainerCard{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-direction: row;
-  
-}
-.restroCard{
-    width:300px;
-    height:250px;
-    display: flex;
-    flex-direction: column;
-    background-color: #f0f0f0;
-    padding: 5px;
-    margin: 10px 10px;
-    border-radius: 8px;
-}
-.restroCard:hover{
-    border:2px solid rgb(248, 244, 244);
-    cursor: pointer;
-}
-.imgCard{
-    width:100%;
-    height:75%;
-    position: relative;
-
-}
-.imgLogo{
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    
-}
-.restroDetails{
-    width:100%;
-    height:25%;
-    font-size: 0.9rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    /* text-align: center; */
-    display: flex;
-    flex-direction: row;
-    padding: 2px;
-}
-.restroName{
-font-weight: bold;
-font-size: 1rem;
-}
-.restroDetailsChild1{
-    width:70%;
-    height:100%;
-    font-size: 0.9rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
-}
-.restroDetailsChild2{
-    width:30%;
-    height:100%;
-    font-size: 0.9rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    margin-top: 8px;
-}
-.restroRating{
-    width:55px;
-    height:20px;
-    background-color: green;
-    border-radius: 5px;
-    text-align: center;
-}
-.restroEta{
-    width:55px;
-    height:20px;
-    /* background-color: green;
-    border-radius: 5px; */
-}
-.restroCost{
-    width:100px;
-    height:20px;
-    /* background-color: green;
-    border-radius: 5px; */
-}
-.text-container {
-    position: absolute;
-    color: rgb(255, 255, 255);
-    /* left: 18rem; */
-    top: 10rem;
-    font-size: 1rem;
-    padding: 0px 0.6rem;
-    background: rgb(37, 111, 239);
-    color: rgb(255, 255, 255);
-    font-weight: 400;
-    width: max-content;
-    border-radius: 0px 0.2rem 0.2rem 0px;
-    max-width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.restroItems{
-font-size: 0.7rem;
-}
-.filter-btn{
-    margin: 10px;
-}
-/* .btnComp{
-    width:80px;
-    height:80px
-} */
-
-.restraCont1{
-    width:100%;
-    height:50px;
-    display: flex;
-    flex-direction: row;
-    /* justify-content: center; */
-    align-items: center;
-}
-.search-box{
-    width:85%;
-    height:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 2%;
-}
-.serach-input{
-    width:90%;
-    height: 50%;
-   margin: 0 3%;
-}
-.search-btn{
-    width:7%;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
